@@ -357,10 +357,10 @@ Client::run (void)
 int
 ACE_TMAIN (int argc, ACE_TCHAR *argv[])
 {
-  CORBA::ORB_var orb = CORBA::ORB_init (argc, argv);
-
   try
     {
+      CORBA::ORB_var orb = CORBA::ORB_init (argc, argv);
+
       CORBA::Object_var obj
         = orb->resolve_initial_references ("RootPOA");
 
